Features and Issues complete up to Use Case 8.  Initial work for Chrome 61.

--- a/ZaimaCSS/ZaimaUseCases-Chrome61.html
+++ b/ZaimaCSS/ZaimaUseCases-Chrome61.html
@@ -31,7 +31,7 @@ f.breadcrumb = 'markup';
 
 f.additionalLinks = ''
 </script>
-<link rel="stylesheet" href="zaima.css" type="text/css" />
+<link rel="stylesheet" href="zaima-chrome61.css" type="text/css" />
 <script type="text/javascript" src="https://www.w3.org/International/questions/qa-ruby-data/translations.js"> </script>
 <script type="text/javascript" src="https://www.w3.org/International/javascript/doc-structure/article-dt.js"> </script>
 <script type="text/javascript" src="https://www.w3.org/International/javascript/boilerplate-text/boilerplate-en.js"></script><!--TRANSLATORS must change -en to the subtag for their language!-->
@@ -131,6 +131,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <h3>Use Case 1</h3>
 
+
 <p><strong>Features:</strong>
 <ul>
   <li>Four rows of annotation.</li>
@@ -144,12 +145,12 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 </p>
 
 
-<figure class="example figure-wide">
+<figure class="example">
 <table>
   <colgroup>
     <col width="230px"/>
-    <col width="230px"/>
-    <col width="500px"/>
+    <col width="150px"/>
+    <col width="400px"/>
   </colgroup>
   <tbody>
   <tr>
@@ -158,20 +159,20 @@ the overall readibility of electronically laid out Zaima in general, and to eval
   <tr>
   <td><img style="display: block; margin-left: auto; margin-right: auto;" src="use-cases/SelotKidasiePage113i1.png"/></td>
   <td valign="bottom">
-    <div style="position: relative; top: 80px;">
+    <div style="position: relative; top: 180px;">
     <ruby class="row4ex">
       <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>᎔᎖</span></rt>
+      <rb>በሮ</rb><rt>᎔᎖</rt>
     </ruby>
     <ruby class="row3ex">
       <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>᎓ሞኂ</span></rt>
+      <rb>በሮ</rb><rt>᎓ሞኂ</rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt style="text-align: left;"><span>᎖</span></rt>
-      <rb>በሮ</rb><rt><span>ሥቱ</span></rt>
+      <rb>ከ</rb><rt style="text-align: left;">᎖</rt>
+      <rb>በሮ</rb><rt>ሥቱ</rt>
     </ruby>
-    <ruby class="row1">
+    <ruby class="row1ex">
       <rb>ከ</rb><rt>᎐</rt>
       <rb>በ</rb><rt>᎐</rt>
       <rb>ሮ</rb><rt>ር</rt>
@@ -179,22 +180,22 @@ the overall readibility of electronically laid out Zaima in general, and to eval
     </div>
   </td>
   <td valign="bottom">
-    <div style="position: relative; top: 80px;">
+    <div style="position: relative; top: 180px;">
     <ruby class="row4ex">
       <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>᎔᎖</span></rt>
+      <rb>በሮ</rb><rt>᎔᎖</rt>
     </ruby>
     <ruby class="row3ex">
       <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt style="text-align: right;"><span>ሞኂ</span></rt>
+      <rb>በ</rb><rt>᎓</rt>
+      <rb>ሮ</rb><rt style="text-align: right;">ሞኂ</rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
+      <rb>ከ</rb><rt>᎖</rt>
       <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt style="text-align: right;"><span>ሥቱ</span></rt>
+      <rb>ሮ</rb><rt style="text-align: right;">ሥቱ</rt>
     </ruby>
-    <ruby class="row1">
+    <ruby class="row1ex">
       <rb>ከ</rb><rt>᎐</rt>
       <rb>በ</rb><rt>᎐</rt>
       <rb>ሮ</rb><rt style="text-align: right;">ር</rt>
@@ -204,44 +205,48 @@ the overall readibility of electronically laid out Zaima in general, and to eval
   </tr>
   <tr>
   <td colspan="2"><script type="text/plain">
+    <div style="position: relative;">
     <ruby class="row4ex">
       <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>᎔᎖</span></rt>
+      <rb>በሮ</rb><rt>᎔᎖</rt>
     </ruby>
     <ruby class="row3ex">
       <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>᎓ሞኂ</span></rt>
+      <rb>በሮ</rb><rt>᎓ሞኂ</rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt style="text-align: left;"><span>᎖</span></rt>
-      <rb>በሮ</rb><rt><span>ሥቱ</span></rt>
+      <rb>ከ</rb><rt style="text-align: left;">᎖</rt>
+      <rb>በሮ</rb><rt>ሥቱ</rt>
     </ruby>
-    <ruby class="row1">
+    <ruby class="row1ex">
       <rb>ከ</rb><rt>᎐</rt>
       <rb>በ</rb><rt>᎐</rt>
       <rb>ሮ</rb><rt>ር</rt>
     </ruby>
+    </div>
   </script></td>
   <td><script type="text/plain">
+    <div style="position: relative;">
     <ruby class="row4ex">
       <rb>ከ</rb><rt></rt>
-      <rb>በሮ</rb><rt><span>᎔᎖</span></rt>
+      <rb>በሮ</rb><rt>᎔᎖</rt>
     </ruby>
     <ruby class="row3ex">
       <rb>ከ</rb><rt></rt>
-      <rb>በ</rb><rt><span>᎓</span></rt>
-      <rb>ሮ</rb><rt style="text-align: right;"><span>ሞኂ</span></rt>
+      <rb>በ</rb><rt>᎓</rt>
+      <rb>ሮ</rb><rt style="text-align: right;">ሞኂ</rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
+      <rb>ከ</rb><rt>᎖</rt>
       <rb>በ</rb><rt></rt>
-      <rb>ሮ</rb><rt style="text-align: right;"><span>ሥቱ</span></rt>
+      <rb>ሮ</rb><rt style="text-align: right;">ሥቱ</rt>
     </ruby>
-    <ruby class="row1">
+    <ruby class="row1ex">
       <rb>ከ</rb><rt>᎐</rt>
       <rb>በ</rb><rt>᎐</rt>
       <rb>ሮ</rb><rt style="text-align: right;">ር</rt>
     </ruby>
+    </div>
   </script></td>
   </tr>
   </tbody>
@@ -504,14 +509,6 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <h3>Use Case 4</h3>
 
-<p><strong>Features:</strong>
-<ul>
-  <li>Three rows of annotation.</li>
-  <li>Slanted qirts in first row after ነ and following.</li>
-  <li>Spanning of annotations in both rows across the word boundary ፡ marker over the sequence ነ፡፩.</li>
-  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
-</ul>
-
 <figure class="example figure-wide">
 <table>
   <colgroup>
@@ -591,7 +588,8 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>The beginning of the ᎒᎒᎒ sequence does not begin over ነ but the overall start and end of the annotation between ኮ and ፩ seems ok. Review with an expert.</li>
+  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
+  <li>Is the first or second redendering preferable? Does the diference impact vocalization?</li>
 </ul>
 </p>
 
@@ -600,12 +598,6 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 
 <h3>Use Case 5</h3>
-
-<p><strong>Features:</strong>
-<ul>
-  <li>Four rows of annotation -verify that the apparent lower rows are independent.</li>
-  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
-</ul>
 
 <figure class="example">
 <table>
@@ -733,7 +725,6 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><strong>Issues:</strong>
 <ul>
   <li>Verify ይ or ዶ in row 3</li>
-  <li>Look up the miliket for ኢ ይ ኃ to determine if these are 1, 2 or 3 miliket and if they should be written contiguously.</li>
   <li>Right justify desired for ኢ above ወ on row 3, and for both ጐ᎖ and ᎐᎖᎖ above ከ on rows 3 and 4 respectively</li>
   <li>፡ would vanish if placed after the closing ruby tag as per:<br/>
       &nbsp;&nbsp;&lt;rb&gt;ወሀብከ&lt;/rb&gt;&lt;rt&gt;&lt;span&gt;&lt;/span&gt;&lt;/rt&gt;&lt;/ruby&gt;፡<br/>
@@ -749,13 +740,10 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-<h3>Use Case 6</h3>
+<!--    ᎐ ᎓ ᎒ ᎙ ᎑ ᎔ ᎖᎕  ᎗  ᎘ -->
 
-<p><strong>Features:</strong>
-<ul>
-  <li>Three rows of annotation -verify that the apparent lower rows are independent.</li>
-  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
-</ul>
+
+<h3>Use Case 6</h3>
 
 <figure class="example">
 <table>
@@ -862,8 +850,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Determine if ርእሶ is one or two (ርእ &amp; ሶ) miliket and space as needed.</li>
-  <li>Determine if it is OK for አጽነ to extend over ነ.</li>
+  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
   <li>Is the first or second redendering preferable? Does the diference impact vocalization?</li>
 </ul>
 </p>
@@ -873,14 +860,6 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 
 <h3>Use Case 7</h3>
-
-<p><strong>Features:</strong>
-<ul>
-  <li>Three rows of annotation.</li>
-  <li>Apparent overhang of <span class="diret_difat"></span>᎓᎔ from ከ.</li>
-  <li>Example of ፴ with omitted lower bar.</li>
-  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
-</ul>
 
 <figure class="example">
 <table>
@@ -965,8 +944,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Top alignment of ሙ beside ᎒ likely just due to the arrival of the 2nd row and not meaningful.</li>
-  <li>ከመ  ፀሐይ in the 2<sup>nd</sup> row is curious. Determine if this is miliket or another type of annotation.</li>
+  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
 </ul>
 </p>
 
@@ -975,12 +953,6 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 
 <h3>Use Case 8</h3>
-
-<ul>
-  <li>Four rows of annotation -verify that the apparent lower rows are independent.</li>
-  <li>Hidet above ርጥቁ may is possibly a case of a nested Ruby (annotation with annotation as per serayu). May also be an example of joining Hidet.</li>
-  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
-</ul>
 
 <figure class="example figure-wide">
 <table>
@@ -1083,8 +1055,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>ኢየሱስ ክርስቶ in the 2<sup>nd</sup> row is curious. Determine if this is miliket or another type of annotation.</li>
-  <li>The Hidet alignment appears off in Safari, review in other browsers.</li>
+  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
 </ul>
 </p>
 
