Features and Issues complete up to Use Case 14.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -591,7 +591,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>The beginning of the ᎒᎒᎒ sequence does not begin over ነ but the overall start and end of the annotation between ኮ and ፩ seems ok. Review with an expert.</li>
+  <li>The beginning of the ᎒᎒᎒ sequence does not begin over ነ but the overall start and end of the annotation between ኮ and ፩ seems ok. Review with an expert-practioner.</li>
 </ul>
 </p>
 
@@ -965,7 +965,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Top alignment of ሙ beside ᎒ likely just due to the arrival of the 2nd row and not meaningful.</li>
+  <li>Top alignment of ሙ᎘ beside ᎒ likely just due to the arrival of ከመ in the 2nd row and is not meaningful.</li>
   <li>ከመ  ፀሐይ in the 2<sup>nd</sup> row is curious. Determine if this is miliket or another type of annotation.</li>
 </ul>
 </p>
@@ -1262,6 +1262,8 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><strong>Features:</strong>
 <ul>
   <li>Right side overhang, rising.</li>
+  <li>Three part distribution of ዮሐንስ.</li>
+  <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
 </ul>
 </p>
 
@@ -1321,7 +1323,9 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
+  <li>The extent of overhang of the annotation is visually very diferent as a consquence of the typeface properties -does this matter?</li>
+  <li>Top alignment of ሙ᎘ beside ᎒ likely just due to the arrival of the ሌሊ in the 2nd row and not meaningful.</li>
+  <li>Is ᎖ left aligned with ገ important, or may it be centered (default)?</li>
 </ul>
 </p>
 
@@ -1334,6 +1338,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><strong>Features:</strong>
 <ul>
   <li>Right side overhang, rising.</li>
+  <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
 </ul>
 </p>
 
@@ -1380,7 +1385,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li></li>
+  <li>The vertical red strokes are either a form of ᎒ or  ᎙, check with an expert-practioner.</li>
 </ul>
 </p>
 
@@ -1393,6 +1398,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><strong>Features:</strong>
 <ul>
   <li>Inner overhang, falling.</li>
+  <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
 </ul>
 </p>
 
@@ -1437,7 +1443,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li></li>
+  <li>The vertical red strokes are either a form of ᎒ or  ᎙, check with an expert-practioner.</li>
 </ul>
 </p>
 
@@ -1450,6 +1456,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><strong>Features:</strong>
 <ul>
   <li>Inner overhang.</li>
+  <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
 </ul>
 </p>
 
@@ -1508,6 +1515,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <ul>
   <li>"text-align: left;" of ቡበ᎖᎓᎔᎖᎓᎔᎓᎔ in the rt over ፡ኦ had no effect, until an " &amp;nbsp;" was added in the rb.</li>
   <li>An " &amp;nbsp;" was added to after ፡ኦ to force alignment of ቡ over ፡ and not the white space before it. This forced space between ፡ and ኦ. </li>
+  <li>The vertical red strokes are either a form of ᎒ or  ᎙, check with an expert-practioner.</li>
 </ul>
 </p>
 
