Completed remaining Features and Issues.

--- a/ZaimaCSS/ZaimaUseCases-Chrome61.html
+++ b/ZaimaCSS/ZaimaUseCases-Chrome61.html
@@ -1512,7 +1512,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>ሁ</rb><rt><span>ሢ</span></rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ጕ</rb><rt style="text-align: right;"><span>ብር᎖᎓᎔᎓</span></rt>
+      <rb>ጕ</rb><rt style="text-align: right;"><span>ቡር᎖᎓᎔᎓</span></rt>
       <rb>ርዔሁ</rb><rt></rt>
     </ruby>
     <ruby class="row1">
@@ -1533,7 +1533,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>ሁ</rb><rt><span>ሢ</span></rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ጕ</rb><rt style="text-align: right;"><span>ብር᎖᎓᎔᎓</span></rt>
+      <rb>ጕ</rb><rt style="text-align: right;"><span>ቡር᎖᎓᎔᎓</span></rt>
       <rb>ርዔሁ</rb><rt></rt>
     </ruby>
     <ruby class="row1">
@@ -1702,7 +1702,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
   <td><img src="use-cases/SelotKidasiePage103i1.png"/></td>
   <td valign="bottom">
     <div style="position: relative; top: 60px;">
-    <span style="font-size: 50px;">ይሕ፤</span
+    <span style="font-size: 50px; color: red;">ይሕ፤</span
     ><ruby class="row3ex red-miliket">
       <rb>ኪ</rb><rt><span></span></rt>
       <rb>ያ</rb><rt><span></span></rt>
@@ -1731,7 +1731,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>ኦ</rb><rt>ሰ</rt>፡
     </ruby>
 <br/><br/>
-    <span style="font-size: 50px;">ይሕ፤</span
+    <span style="font-size: 50px; color: red;">ይሕ፤</span
     ><ruby class="row2ex red-miliket">
       <rb>ኪያ</rb><rt><span>᎓᎖᎓᎖</span></rt>
       <rb>ከ</rb><rt><span>ረዩ</span></rt>
