--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -1263,6 +1263,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
   <li>Right side overhang, rising.</li>
   <li>Three part distribution of ዮሐንስ.</li>
   <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
 </ul>
 </p>
 
@@ -1338,6 +1339,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <ul>
   <li>Right side overhang, rising.</li>
   <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
 </ul>
 </p>
 
@@ -1398,6 +1400,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <ul>
   <li>Inner overhang, falling.</li>
   <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
 </ul>
 </p>
 
@@ -1456,6 +1459,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <ul>
   <li>Inner overhang.</li>
   <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
 </ul>
 </p>
 
@@ -1528,6 +1532,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <ul>
   <li>Left side overhang.</li>
   <li>Use Case Question: How critical is it to reproduce the overhang as seen?</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
 </ul>
 </p>
 
@@ -1607,6 +1612,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <ul>
   <li>Overlapping row position -row 2 overlaps rows 1 and 3.</li>
   <li>Use Case Question: How critical is it to reproduce the low overlap as seen?</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
 </ul>
 </p>
 
@@ -1729,7 +1735,9 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <ul>
   <li>Is the first or second redendering preferable? Does the difference impact vocalization?</li>
   <li>Verify spelling of ገጸ.</li>
-  <li>Rows 1 and 4 appear redundant, check the broader context of the line of text line.</li>
+  <li>If laying out ገጸ on its own row is appropriate, is using the default annotation alignment (centered) also appropriate or should
+      the original be preserved?</li>
+  <li>Rows 1 and 4 appear redundant in our isolated example, check the broader context of the line of text line.</li>
 </ul>
 </p>
 
@@ -1738,6 +1746,14 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 
 <h3>Use Case 17</h3>
+
+<p><strong>Features:</strong>
+<ul>
+  <li>Two or three rows of annotation.</li>
+  <li>Apparent row overlap above ንሴብሕ.</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
+</ul>
+</p>
 
 <figure class="example figure-wide">
 <table>
@@ -1750,7 +1766,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
   <td><img src="use-cases/SelotKidasiePage103i1.png"/></td>
   <td valign="bottom">
     <div style="position: relative; top: 60px;">
-    <span style="font-size: 50px;">ይሕ፤</span
+    <span style="font-size: 50px; color: red;">ይሕ፤</span
     ><ruby class="row3ex red-miliket">
       <rb>ኪ</rb><rt><span></span></rt>
       <rb>ያ</rb><rt><span></span></rt>
@@ -1779,7 +1795,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>ኦ</rb><rt>ሰ</rt>፡
     </ruby>
 <br/><br/>
-    <span style="font-size: 50px;">ይሕ፤</span
+    <span style="font-size: 50px; color: red;">ይሕ፤</span
     ><ruby class="row2ex red-miliket">
       <rb>ኪያ</rb><rt><span>᎓᎖᎓᎖</span></rt>
       <rb>ከ</rb><rt><span>ረዩ</span></rt>
@@ -1864,7 +1880,9 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
+  <li>Determine if two or three rows are present above ንሴብሕ.  If two rows, what is the context of the red annotation in the first row?</li>
+  <li>Some 2<sup>nd</sup> row annotation appear very close to the first row, as if shadowing it, is this spacing required in digital form?</li>
+  <li>If the first row red annotation above ሴ ,ብ &amp; ሕ belong in their own row, is using the default annotation alignment (centered) also appropriate or should the original be preserved?</li>
 </ul>
 </p>
 
@@ -1873,6 +1891,14 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 
 <h3>Use Case 18</h3>
+
+<p><strong>Features:</strong>
+<ul>
+  <li>Three or four rows of annotation.</li>
+  <li>Second row (red) appears to collapse into the first row in several places.</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
+</ul>
+</p>
 
 <figure class="example">
 <table>
@@ -2025,17 +2051,24 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
+  <li>Determine if three or four rows are present.  If three rows, what is the context of the red annotation in the first row?</li>
 </ul>
 </p>
 
-<!--    ᎐ ᎓ ᎒ ᎙ ᎑ ᎔ ᎖᎕  ᎗  ᎘<br/> -->
 
 
 <p><br/></p>
 
 
 <h3>Use Case 19</h3>
+
+<p><strong>Features:</strong>
+<ul>
+  <li>Three to five rows of annotation.</li>
+  <li>As with use cases 16-18, some red annotations may or may not represent separate rows.</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
+</ul>
+</p>
 
 <figure class="example figure-wide">
 <table>
@@ -2166,8 +2199,10 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
-  <li>Is the first or second redendering preferable? Does the difference impact vocalization?</li>
+  <li>Determine if three, four or five rows are present.  If three rows, what is the context of the red annotation in the lower rows?</li>
+  <li>Some 2<sup>nd</sup> row annotation appear very close to the first row, as if shadowing it, is this spacing required in digital form?</li>
+  <li>If the first row red annotation above ሴ ,ብ &amp; ሕ belong in their own row, is using the default annotation alignment (centered) also appropriate or should the original be preserved?</li>
+  <li>As with similar occurences in Use Cases 16 &amp; 17, is the repositioning of ᎒ጽ above ብ appropriate?</li>
 </ul>
 </p>
 
@@ -2175,9 +2210,15 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 <p><br/></p>
 
 
-
-
 <h3>Use Case 20</h3>
+
+<p><strong>Features:</strong>
+<ul>
+  <li>Three or four rows of annotation.</li>
+  <li>As with use cases 16-19, some red annotations may or may not represent separate rows.</li>
+  <li><em>TBD: Add a context note (modes, ceremonies).</em></li>
+</ul>
+</p>
 
 <figure class="example figure-wide">
 <table>
@@ -2317,7 +2358,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Unable to right align ruby-text over the final base character on rows 1, 2 and 3. Attempts were made with variations on:  style="float: right; text-align: right; white-space: nowrap;"</li>
+  <li>As with similar occurences in Use Cases 16-18, is the repositioning of ቡ above ት appropriate?</li>
 </ul>
 </p>
 
