Chrome 61 updates nearly complete.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -302,7 +302,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>ሊ</rb><rt style="text-align: left;"><span>᎑</span></rt>
       <rb>ባ</rb><rt><span></span></rt>
       <rb>ኖ</rb><rt><span>ው</span></rt>
-      <rb>ስ</rb><rt>᎗</rt>
+      <rb>ስ</rb><rt><span>᎗</span></rt>
       <rb>፡</rb><rt><span></span></rt>
       <rb>ክ</rb><rt><span>ተዒ</span></rt>
       <rb>ቡ</rb><rt style="text-align: left;"><span><span style="font-size: 25%;">&nbsp;</span>᎖</span></rt>
@@ -434,7 +434,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>፡</rb><rt></rt>
       <rb>ና</rb><rt>᎐</rt>
       <rb>ክብ</rb><rt></rt>
-      <rb>ር</rb><rt span style="text-align: right;"><span>ር</span></rt>
+      <rb>ር</rb><rt span style="text-align: right;">ር</rt>
     </ruby>
     </div>
   </td>
@@ -478,7 +478,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>፡</rb><rt></rt>
       <rb>ና</rb><rt>᎐</rt>
       <rb>ክብ</rb><rt></rt>
-      <rb>ር</rb><rt span style="text-align: right;"><span>ር</span></rt>፡
+      <rb>ር</rb><rt span style="text-align: right;">ር</rt>፡
     </ruby>
   </script></td>
   </tr>
@@ -2358,7 +2358,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>As with similar occurences in Use Cases 16-18, is the repositioning of ቡ above ት appropriate?</li>
+  <li>As with similar occurences in Use Cases 16-19, is the repositioning of ቡ above ት appropriate?</li>
 </ul>
 </p>
 
