All use cases format correctly for Chrome 61.

--- a/ZaimaCSS/ZaimaUseCases-Chrome61.html
+++ b/ZaimaCSS/ZaimaUseCases-Chrome61.html
@@ -2172,7 +2172,9 @@ the overall readibility of electronically laid out Zaima in general, and to eval
       <rb>ነ</rb><rt>᎔</rt>
       <rb>ጽር</rb><rt>᎑᎓ራቀ᎒ዑ</rt><span style="color: red;">።</span>
     </ruby>
+    </div>
     <br/> <br/> <br/>
+    <div style="position: relative; top: 70px;">
     <span style="font-size: 50px; color: red;">ይካ፤</span>
     <ruby class="row4ex red-miliket">
       <rb>ቅድሳት፡ለ</rb><rt></rt>
